tests/rosetta/out/Smalltalk/bitwise-operations.out
/tmp/bitwise-operations.st:12: parse error, expected ']'
